
WinMerge 2.9.0.1
  Installer: Use correct way to create start menu web link (#1913919)
  Installer: Simplify DeletePreviousStartMenu() function (#1913949)
  Installer: Updated the side art of the installer application (#1915012)
  Update URLs and switch to 2.8 manual (#1919965)
  New splash screen (#1914869)
  Tab icons at Filter dialog (#1926531)
  Add VS2003/VS2005 project files (#1926346)
  BugFix: Installer could create a registry access error (#1909967)
  BugFix: The filter text box in Open-dialog sometimes displayed some garbage
    data (#1915424)
  BugFix: Print area was not clipped correctly. (#1915536)
  BugFix: Undo after pane swapping (#1915536, #1923625)
  Translation updates:
  - Brazilian (#1913723)
  - Chinese Traditional (#1927605)
  - French (#1920380)
  - German (r5130, r5139, r5171, r5203)
  - Japanese (r5152)
  - Russian (#1914466)
  - Swedish (#1908289)

WinMerge 2.8 RC - 2008-03-04 (r5125)
  Update developers list in splash screen (#1891548)
  Better error handling for Excel plugin (#1510293)
  Add macros, bookmarks and document properties to Word plugin (#1510298)
  Add *.dot (document template) extension to Word plugin (r5120)
  BugFix: Copy&Paste from VB6 added binary chars (#1904355)
  Translation updates:
  - Chinese Traditional (#1905323)
  - Swedish (#1905520)

WinMerge 2.7.7.6 - 2008-02-28 (r5099)
  Remove sintance.h/sintance.cpp as not compatible with GPL (#1886580)
  Automatically switch to mixed-EOL mode when loading files with
   two or more EOL styles (#1901547)
  Indent "Explorer Context Menu" sub options (#1901763)
  Replace 'DOS' in EOL style strings with 'Windows' (#1902583)
  Show 'Mixed' as file compare EOL style instead of empty style (r5091)
  Typo fixes and grammar improvements to several strings (#1898401)
  BugFix: Ignore codepage specified on File Encoding dialog if file was 
    detected as UTF-8 (#1900728)
  BugFix: Recognize invalid UTF-8 sequence as UTF-8 (#1900733)